# vulkan-calc

./: .gitignore  CMakeLists.txt  MEMO.txt  README.md  build-windows.bat  installer.iss  resources.rc  sys
imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
shaders/: calc.vert  text_vert.spv
src/: calc_logic.cpp  calc_logic.hpp  locale.hpp  main.cpp  math_engine.cpp  math_engine.hpp  state.hpp  ui.cpp  ui.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
